[gd_scene load_steps=16 format=3 uid="uid://b76vnt4rv4p0q"]

[ext_resource type="Script" path="res://addons/ridiculous_coding/resources/interfaces/dock.gd" id="1_bsxap"]
[ext_resource type="FontFile" uid="uid://bvwnnnja1ur2i" path="res://addons/ridiculous_coding/font.tres" id="2_30kug"]
[ext_resource type="Texture2D" uid="uid://dgda8elabipl5" path="res://addons/ridiculous_coding/images/under.png" id="2_31vgn"]
[ext_resource type="Texture2D" uid="uid://dqpxh1bccjaae" path="res://addons/ridiculous_coding/images/progress.png" id="3_8udha"]
[ext_resource type="Texture2D" uid="uid://btor3wb23ou3g" path="res://addons/ridiculous_coding/images/settings.png" id="4_47w44"]
[ext_resource type="Texture2D" uid="uid://bh1a4uodo8icx" path="res://addons/ridiculous_coding/images/reset.png" id="5_ixcai"]
[ext_resource type="Texture2D" uid="uid://b6dflrbbwhrrk" path="res://addons/ridiculous_coding/images/undo.png" id="5_vck6p"]
[ext_resource type="Texture2D" uid="uid://byrik8o2aqyc7" path="res://addons/ridiculous_coding/images/levelUp.png" id="5_x3pn4"]

[sub_resource type="Curve" id="Curve_vw6wu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_p61ym"]
curve = SubResource("Curve_vw6wu")

[sub_resource type="Gradient" id="Gradient_pbe0o"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.33, 0.66, 1)
colors = PackedColorArray(0.00392157, 0.521569, 0.788235, 1, 0.239216, 0.752941, 0, 1, 0.54902, 0.858824, 0, 1, 1, 0.0862745, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0x0nl"]
gradient = SubResource("Gradient_pbe0o")
width = 512

[sub_resource type="Curve" id="Curve_jhteb"]
min_value = 0.1
_data = [Vector2(0, 0.1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_nrvs0"]
width = 512
curve = SubResource("Curve_jhteb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hhjrr"]
lifetime_randomness = 0.3
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.34
angle_min = -10.0
angle_max = 10.0
direction = Vector3(0, -1, 0)
spread = 15.0
initial_velocity_min = 250.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.01
scale_max = 0.1
scale_over_velocity_min = 0.1
scale_over_velocity_max = 1.0
scale_over_velocity_curve = SubResource("CurveTexture_nrvs0")
color = Color(2, 2, 2, 1)
color_initial_ramp = SubResource("GradientTexture1D_0x0nl")
alpha_curve = SubResource("CurveTexture_p61ym")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="RidiculousCodingDock" type="Control"]
texture_filter = 5
custom_minimum_size = Vector2(248, 113)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bsxap")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 21

[node name="XP" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="XpLabel" type="Label" parent="VBoxContainer/XP"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_30kug")
theme_override_font_sizes/font_size = 11
text = "XP: 0 / 100"

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer/XP"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("2_31vgn")
texture_progress = ExtResource("3_8udha")

[node name="Firework0" type="Control" parent="VBoxContainer/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FireworkParticles2d" type="GPUParticles2D" parent="VBoxContainer/XP/ProgressBar/Firework0"]
z_index = 1
position = Vector2(25, 0)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_hhjrr")
texture = ExtResource("5_x3pn4")

[node name="Firework1" type="Control" parent="VBoxContainer/XP/ProgressBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="FireworkParticles2d" type="GPUParticles2D" parent="VBoxContainer/XP/ProgressBar/Firework1"]
z_index = 1
position = Vector2(-25, 0)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_hhjrr")
texture = ExtResource("5_x3pn4")

[node name="FireworkTimer" type="Timer" parent="VBoxContainer/XP/ProgressBar"]
wait_time = 3.0

[node name="LevelLabel" type="Label" parent="VBoxContainer/XP"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_30kug")
theme_override_font_sizes/font_size = 11
text = "infant dev - Lvl 0"
horizontal_alignment = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 30
columns = 4

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer/GridContainer"]
self_modulate = Color(0.682353, 0.682353, 0.682353, 1)
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Open Settings"
texture_normal = ExtResource("4_47w44")
texture_pressed = ExtResource("4_47w44")
texture_hover = ExtResource("4_47w44")
texture_disabled = ExtResource("4_47w44")
texture_focused = ExtResource("4_47w44")
ignore_texture_size = true
stretch_mode = 0

[node name="ResetUndoButton" type="TextureButton" parent="VBoxContainer/GridContainer"]
self_modulate = Color(0.682353, 0.682353, 0.682353, 1)
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Undo Reset"
texture_normal = ExtResource("5_vck6p")
texture_pressed = ExtResource("5_vck6p")
texture_hover = ExtResource("5_vck6p")
texture_disabled = ExtResource("5_vck6p")
texture_focused = ExtResource("5_vck6p")
ignore_texture_size = true
stretch_mode = 0

[node name="ResetButton" type="TextureButton" parent="VBoxContainer/GridContainer"]
self_modulate = Color(0.682353, 0.682353, 0.682353, 1)
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Reset Level"
texture_normal = ExtResource("5_ixcai")
texture_pressed = ExtResource("5_ixcai")
texture_hover = ExtResource("5_ixcai")
texture_disabled = ExtResource("5_ixcai")
texture_focused = ExtResource("5_ixcai")
ignore_texture_size = true
stretch_mode = 0

[node name="LevelUpButton" type="TextureButton" parent="VBoxContainer/GridContainer"]
self_modulate = Color(0.682353, 0.682353, 0.682353, 1)
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
tooltip_text = "Level Up!"
texture_normal = ExtResource("5_x3pn4")
texture_pressed = ExtResource("5_x3pn4")
texture_hover = ExtResource("5_x3pn4")
texture_disabled = ExtResource("5_x3pn4")
texture_focused = ExtResource("5_x3pn4")
ignore_texture_size = true
stretch_mode = 0
